<resources>
    <string name="app_name">InventoryAppStage1Udacity</string>

    <!-- Title for the CatalogActivity [CHAR LIMIT=20] -->
    <string name="video_games_inventory">Games Inventory</string>

    <!-- Title for the EditorActivity [CHAR LIMIT=20] -->
    <string name="edit_games">Edit Games</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!--Strings for the activity_editor.xml -->
    <string name="label_product_overview"> Video Game Overview</string>
    <string name="edit_product_name">Game Name</string>
    <string name="label_supplier_overview">Supplier Overview</string>
    <string name="edit_supplier_name">Supplier Name</string>
    <string name="edit_price">Price</string>
    <string name="edit_quantity">Quantity</string>
    <string name="edit_supplier_contact">Supplier Contact</string>

    <!--Strings for the CatalogActivity-->
    <string name="the_games_table_contains">The games table contains</string>

    <!--Strings for the EditorActivity-->
    <string name="error_saving_games">Error with saving games</string>
    <string name="game_saved">Game saved with row id:</string>

    <!--All the input fields are required to be populated by user in activity_editor.xml-->
    <string name="required_field">Required</string>

    <!--Price cannot be negative -->
    <string name="price_cannot_be_negative">Price cannot be negative</string>

    <!--Quantity cannot be negative -->
    <string name="quantity_cannot_be_negative">Quantity cannot be negative</string>

    <!--Games Inventory -->
    <string name="games_inventory">Games Inventory</string>

    <!--Supplier's name list -->
    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_sony">Sony Game Electronics</string>
    <string name="supplier_gamers">Gamers Offline</string>
    <string name="supplier_players">Players Unknown Seller</string>
</resources>
